--- a/src/pages/SorryIJustWentIntoATunn.module.scss
+++ b/src/pages/SorryIJustWentIntoATunn.module.scss
@@ -1,2 +1,12 @@
 .root {
 }
+
+.video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
