--- a/src/components/SorryIJustWentIntoATunnPhone/SorryIJustWentIntoATunnPhone.module.scss
+++ b/src/components/SorryIJustWentIntoATunnPhone/SorryIJustWentIntoATunnPhone.module.scss
@@ -21,3 +21,30 @@
   position: relative;
   height: 80vh;
 }
+
+@keyframes pulse {
+  0% {
+    opacity: 0.75;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.75;
+  }
+}
+
+.namePulse {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90%;
+  height: 60%;
+  left: 5%;
+  top: 30%;
+  // top: 30%;
+  background: #fff;
+  animation: pulse 3s ease-in-out infinite;
+}
