--- a/src/components/EnterAPIKey/EnterAPIKey.module.scss
+++ b/src/components/EnterAPIKey/EnterAPIKey.module.scss
@@ -1,3 +1,13 @@
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+
 .root {
   display: flex;
   flex-direction: column;
@@ -25,9 +35,7 @@
 }
 
 .form input {
-  font-family: "Roboto Mono", serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
+  font-family: "Poppins", serif;
+  font-weight: 500;
   font-style: normal;
-  font-size: 1.4vh;
 }
