--- a/src/components/SorryIJustWentIntoATunnPhone/SorryIJustWentIntoATunnPhone.module.scss
+++ b/src/components/SorryIJustWentIntoATunnPhone/SorryIJustWentIntoATunnPhone.module.scss
@@ -48,3 +48,49 @@
   background: #fff;
   animation: pulse 3s ease-in-out infinite;
 }
+
+.namePulseIntro {
+  position: absolute;
+  top: 5%;
+  left: 0;
+  width: 90%;
+  height: 90%;
+  left: 5%;
+  // top: 30%;
+  background: #fff;
+  animation: pulse 3s ease-in-out infinite;
+}
+
+.form {
+  position: absolute;
+  top: 18%;
+  left: 10%;
+  height: 6.5%;
+  width: 79%;
+}
+
+.form > input {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  background: transparent;
+  text-align: center;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-style: normal;
+  font-size: 1.66vh;
+  color: #fff;
+}
+
+.createKey {
+  width: 90%;
+  height: 4%;
+  position: absolute;
+  top: 25%;
+  left: 5%;
+  background: red;
+  opacity: 0;
+}
